# CNN-in-c-

./: README.md
CMake/src/: CMakeLists.txt
CMake/src/apps/: CMakeLists.txt  MNIST_example.cpp
CMake/src/lib/: CMakeLists.txt
CMake/src/lib/include/: Capa.hpp  Complex.hpp  Convolucion.hpp  FT.hpp  Matriz.hpp  NN.hpp
VSC easy/: Capa.hpp  Complex.hpp  Convolucion.hpp  MNIST_example.cpp  Matriz.hpp  NN.hpp  main.cpp
